--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ description: >-                        # used by seo meta and the atom feed
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
 
-github:
-  username: J-WoW18             # change to your github username
+#github:
+#  username: J-WoW18             # change to your github username
 
 #twitter:
 #  username: twitter_username            # change to your twitter username
@@ -41,7 +41,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: jwowlearn2code.com
-  email: example@doamin.com             # change to your email address
+  email: info@jwowlearn2code.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username      # change to your twitter homepage
