--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social:
   email: info@jwowlearn2code.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - info@jwowlearn2code.com     # change to your twitter homepage
+    - mailto:info@jwowlearn2code.com     # change to your twitter homepage
     # - https://github.com/username       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
