--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ url: ''
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: jwow
+  name: J-WoW
   email: info@jwowlearn2code.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
